--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,11 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs3hEfbNoQPBdI2q8Tvi5QlhetKEoKa_o&libraries=places"
+  async
+  defer
+></script>
 </body>
 
 </html>
