--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,9 +14,12 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjBOhlC7914uPrWPffPIHZO8mTzcgtkow" async
-    defer></script>
 
+
+<script 
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjBOhlC7914uPrWPffPIHZO8mTzcgtkow"
+  async
+></script>
 
 
 </body>
