lich trinh ver1.0

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
 
 
 <script 
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjBOhlC7914uPrWPffPIHZO8mTzcgtkow"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjBOhlC7914uPrWPffPIHZO8mTzcgtkow&libraries=places"
   async
 ></script>
 
