exel hang xe va dia diem

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,9 +16,9 @@
   <script type="module" src="/src/main.jsx"></script>
 
 
-<script 
+<script async
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjBOhlC7914uPrWPffPIHZO8mTzcgtkow"
-  async
+
 ></script>
 
 
